docker/frontend.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: nc-prod
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 990860969901.dkr.ecr.us-east-1.amazonaws.com/nightscloak/frontend:prod-${COMMIT}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: storage-nfs
              mountPath: /var/www/storage
          livenessProbe:
            httpGet:
              port: 80
              path: /healthz
            periodSeconds: 4
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 40" ]
      volumes:
        - name: nginx-config
          configMap:
            name: nginx
        - name: storage-nfs
          nfs:
            server: 192.168.20.47
            path: /mnt/vault/programs/nc/prod/storage
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: aws
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nc-prod
spec:
  ports:
    - port: 80
  selector:
    app: frontend
---
