docker/admin.develop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: develop
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      tolerations:
        - key: sku
          value: develop
          operator: Equal
          effect: NoSchedule
      containers:
        - name: admin
          image: 573377737753.dkr.ecr.us-east-1.amazonaws.com/intract/admin:develop-${COMMIT}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf
            - name: storage-blob
              mountPath: /var/www/storage/app
            - name: std-storage-blob
              mountPath: /var/www/html/storage/standard
          livenessProbe:
            httpGet:
              port: 80
              path: /healthz
            periodSeconds: 4
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 40" ]
      volumes:
        - name: config
          configMap:
            name: intract
        - name: storage-blob
          persistentVolumeClaim:
            claimName: pvc-develop
        - name: std-storage-blob
          persistentVolumeClaim:
            claimName: std-pvc-develop
      terminationGracePeriodSeconds: 70
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: develop
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: develop
  name: develop-admin-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: intract-develop-admin-alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:573377737753:certificate/4807f714-4250-4cb7-91d6-dd3bc6589b8b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 80
