docker/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nc-develop
  namespace: nc-develop
  annotations: # This is the name of the ClusterIssuer created in the previous step
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nightscloak.dev"
    - name: https
      hostname: "*.nightscloak.dev"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          -  name: develop-tls
             kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nc-develop-route
  namespace: nc-develop
spec:
  parentRefs:
    - name: nc-develop
      sectionName: https
      namespace: nc-develop
  hostnames:
    - "nightscloak.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /(.*)
      backendRefs:
      - name: frontend
        port: 80
